# warrantos

./: .gitattributes  .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PRIVACY.md  README.md  SECURITY.md  SUPPORT.md  action-requirements.in  action-requirements.txt  action.yml  mkdocs.yml  pyproject.toml  release-manifest.json
.claude-plugin/: marketplace.json  plugin.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
_papers/: provenance-ledger.warrant
_papers/pl/: cbom.json  claims.json  verdict.json
_smoke/: actor.json  draft.md  draft.warrant  draft2.md
_smoke/run/: boundary.json  cbom.json  claims.json  verdict.json
_webverify/: pubkey.txt  test.cjs  test.warrant
assets/: social-preview.py
cli/: __init__.py  provenance_cli.py  warrantos_cli.py
commands/: provenance-report.md  provenance-verify.md  warrant.md
demo/: README.md  captures.txt  demo.cast  demo.tape
deploy/: README.md  deploy-verifier.ps1  verifier-sha256.txt
deploy/verifier/: _headers
dist-verify/: warrantos-0.9.3-py3-none-any.whl  warrantos-0.9.4-py3-none-any.whl  warrantos-0.9.5-py3-none-any.whl
docs/: COMPATIBILITY.md  COMPLIANCE.md  CONTEXT-ADMISSIBILITY.md  COST.md  DISTRIBUTION.md  FULL-OVERVIEW.md  IMPROVEMENT-ROADMAP-2026-06-11.md  IMPROVEMENT-ROADMAP-2026-06-24.md  LIMITATIONS.md  MCP-CONFIG.md  NO-API-KEY.md  OVERVIEW.md  PLUGIN.md  PRODUCTION-DEPLOYMENT.md  PROVENANCE-LOOP.md  QUICKSTART.md  RELEASE-PROCESS.md  RELEASE-TRUTH.md  SPEC.md  STACK.md  STATUS.md  TELLS.md  VERIFICATION.md  index.md
eval/: README.md  REALSRC-SLICE-DESIGN.md  corpus_expansion.py  measure_precision.py  probe-a-report.md  probe-a-results.json  probe_label_reproducibility.py  run_classifier_corpus.py  run_eval.py
eval/classifier-corpus/: README.md  seeds.jsonl
eval/corpus/: contamination.jsonl  grader_pilot.jsonl  seed.jsonl
examples/: README.md
examples/01-pass/: README.md  context.json  draft.md
examples/03-block-prose-boundary/: README.md  actor.json  context.json  draft.md
examples/04-not-assessable-missing-actor/: README.md  context.json  draft.md
examples/honest-demo/: actor.json  context.json  draft.md
examples/quickstart-demo/: README.md  context.json  draft.md
hooks/: __init__.py  claude_code_verify_hook.py  hooks.json  provenance_check.py
provenance/: __init__.py  attestation.py  cbom.py  clean_room.py  context_admissibility.py  extract.py  gates.py  grade.py  ledger.py  ledger_write.py  mcp_server.py  merkle.py  overrides.py  pathguard.py  review_roles.py  salience.py  status.py  verify.py  warrant_bundle.py  writer_pack.py
schema/: provenance.sql
tests/: conftest.py  test_action_hardening.py  test_action_security.py  test_append_only.py  test_attest_cli.py  test_attestation.py  test_binding_verification.py  test_boundary.py  test_cbom.py  test_claim_support.py  test_claims_semantics.py  test_classification.py  test_classifier_corpus.py  test_claude_code_verify_hook.py  test_clean_room.py  test_cli.py  test_config.py  test_conformance.py  test_context_admissibility.py  test_context_cli.py  test_distribution.py  test_eval.py  test_evidence_cli.py  test_exception_handling.py  test_extract.py  test_footer.py  test_gates.py  test_grade.py  test_hermetic.py  test_init_command.py  test_integration_ledger.py  test_isolation.py  test_ledger.py  test_ledger_write.py  test_llm_filter.py  test_local_llm_grader.py  test_mcp_server.py  test_merkle.py  test_metrics.py  test_overrides.py  (+24 more)
tests/fixtures/: README.md  badsig_bundle.warrant  xss_bundle.warrant
tests/fixtures/conformance/: README.md  claims.md  clean.md  feedback.txt  ledger_entries.json  private_reasoning.txt  residue.md
tools/: check_release_truth.py  check_tag_version.py  run_gallery.py  warrantos-shadow-observe.py
warrantos/: __init__.py
warrantos/cli/: evidence_cli.py  provenance_cli.py  warrantos_cli.py
warrantos/demo_assets/: draft.md
warrantos/hooks/: hooks.json  provenance_check.py
warrantos/provenance/: __init__.py  attestation.py  boundary.py  canonical.py  cbom.py  claim_support.py  claims.py  classification.py  clean_room.py  config.py  conformance.py  context.py  context_admissibility.py  extract.py  footer.py  gates.py  grade.py  ledger.py  ledger_write.py  llm_filter.py  mcp_server.py  merkle.py  metrics.py  overrides.py  pathguard.py  retention.py  review.py  roles.py  salience.py  slop.py  status.py  tells.py  trust.py  verify.py  warrant_bundle.py  writer_pack.py
warrantos/schemas/: __init__.py  claim-binding-v1.json  source-manifest-v1.json  trust-root-v1.json
web/: README.md  verify.html
