[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "warrantos"
# Version is the single source of truth in warrantos/__init__.py (__version__).
# Declared dynamic here so the packaged metadata can never drift from the
# module constant (the 0.9.1-vs-0.9.x desync this release fixes).
dynamic = ["version"]
description = "WarrantOS: a governance harness for AI-assisted writing that ships clean prose and a separate auditable provenance ledger"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [
    { name = "Juan Vega" }
]
maintainers = [
    { name = "Juan Vega" }
]
keywords = [
    "claude",
    "provenance",
    "governance",
    "ai-safety",
    "cbom",
    "warrantos",
    "mcp",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Text Processing :: Markup",
]

# Core runtime: stdlib only. The package ships with zero required
# third-party dependencies. Optional extras live below.
dependencies = []

[project.optional-dependencies]
# MCP server transport. Required only when running the warrantos-mcp
# entry point against Claude Code / Claude Desktop. The Python API
# (provenance.mcp_server.call_tool_in_process) works without this.
mcp = ["mcp>=1.0.0"]

# Attestation: Ed25519 signing/verification of ledger checkpoints. The
# integrity core (provenance.merkle) and .warrant integrity verification are
# stdlib-only; only the asymmetric signature trust-anchor needs this, since the
# standard library ships no public-key signing.
attestation = ["cryptography>=41.0"]

# LLM-assisted claim filtering (Phase 1b-ME). Only needed when opting in
# via WARRANTOS_LLM_VERIFY=on / --llm-verify; the regex-only default path
# stays stdlib-only and never imports this.
llm = ["anthropic>=0.40"]

# Development extras: the test suite is stdlib unittest so no testing
# dep is required.
dev = []

[project.urls]
Homepage = "https://github.com/jvega017/warrantos"
Repository = "https://github.com/jvega017/warrantos"
Issues = "https://github.com/jvega017/warrantos/issues"
Changelog = "https://github.com/jvega017/warrantos/blob/main/CHANGELOG.md"
Documentation = "https://github.com/jvega017/warrantos/blob/main/docs/OVERVIEW.md"

[project.scripts]
# Single-command entry points so users can run the tool without
# remembering a Python module path.
warrantos = "warrantos.cli.warrantos_cli:main"
provenance = "warrantos.cli.provenance_cli:main"
warrantos-mcp = "warrantos.provenance.mcp_server:run_stdio_server"
warrantos-verify-hook = "warrantos.hooks.claude_code_verify_hook:main"
warrantos-evidence = "warrantos.cli.evidence_cli:main"

[tool.setuptools.dynamic]
version = { attr = "warrantos.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["warrantos*"]
exclude = [
    "tests*",
    "eval*",
    "tools*",
    "examples*",
    "docs*",
    ".warrant*",
    ".provenance*",
]

[tool.setuptools.package-data]
# Ship the honest-demo fixtures inside the package so `warrantos demo` works
# from a clean `pip install` (examples/ is not packaged). Without this the
# bundled first-run demo would file-not-found for installed users.
warrantos = [
    "demo_assets/*.md",
    "demo_assets/*.json",
    "schemas/*.json",
    "hooks/hooks.json",
]

[tool.setuptools.data-files]
# Keep the no-backend verifier available after a normal wheel install as well
# as in the source checkout and sdist. It installs under
# <environment>/share/warrantos/web/ so recipients do not need the repository.
"share/warrantos/web" = ["web/verify.html", "web/README.md"]
